# Hammer-Hotspots

./: .gitignore  README.md  spec.md
blender-addon/: README.md  __init__.py  pyproject.toml
blender-addon/src/: __init__.py  hotlib.py
generator/: package.json  pnpm-lock.yaml  specification.md  test.rect  tsconfig.json
generator/src/: encode.ts  fromimg.ts  index.ts
hammer/: CMakeLists.txt
hammer/ext/tier0-asw-x64/include/: logging.h
hammer/ext/tier0-p2-x86/lib/: tier0.lib
hammer/ext/tier0-p2ce-x64/lib/: tier0.lib
hammer/src/: faceedit.cpp  faceedit.h  hotspot.cpp  hotspot.h  interfaces.h  module.cpp  module.h  print.h  rect.h
hammer/src/launcher/: launcher.cpp  launcher_BAD
hammer/src/patcher/: main.cpp  main_OLD  main_PASSTHRU
